componente de pedidos

--- a/src/app/components/locales-adheridos/locales-adheridos.component.html
+++ b/src/app/components/locales-adheridos/locales-adheridos.component.html
@@ -36,7 +36,7 @@
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <button
-                  routerLink="/pedidoComercioAdherido"
+                  routerLink="/productos"
                   type="button"
                   class="btn btn-sm btn-outline-secondary"
                 >
