--- a/src/app/components/productos-locales/productos-locales.component.html
+++ b/src/app/components/productos-locales/productos-locales.component.html
@@ -1,151 +1,90 @@
-<section class="py-5 text-center container">
-    <div class="row">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <button></button>
-        <p class="lead text-muted">Conocé nuestros productos</p>
+<div class="card">
+  <div class="row">
+    <div class="col-md-8 cart">
+      <div class="title">
+        <div class="row">
+          <div class="col">
+            <h4><b>Pedir aquí</b></h4>
+          </div>
+        </div>
+      </div>
+
+      <!-- Primer producto -->
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://http2.mlstatic.com/D_NQ_NP_669692-MLA43732603433_102020-O.jpg" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Empanada</div>
+            <div class="row">Árabe</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(1, -1)">-</button>
+            <span id="counter">{{ contador1  }}</span>
+            <button class="square-btn" (click)="cambiarContador(1, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal1}}</div>
+        </div>
+      </div>
+
+
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://d3ugyf2ht6aenh.cloudfront.net/stores/001/245/528/products/carne-r_17072020-dan_44231-6560a9c0c652593fdb15997480210393-640-0.jpg" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Empanada</div>
+            <div class="row">Carne suave</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(2, -1)">-</button>
+            <span id="counter">{{ contador2 }}</span>
+            <button class="square-btn" (click)="cambiarContador(2, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal2}}</div>
+        </div>
+      </div>
+
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://iloveempanada.com/assets/images/jamon_pro.png" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Empanada</div>
+            <div class="row">Jamón y queso</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(3, -1)">-</button>
+            <span id="counter">{{ contador3 }}</span>
+            <button class="square-btn" (click)="cambiarContador(3, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal3}}</div>
+        </div>
+      </div>
+      <div class="back-to-shop" routerLink="/comerciosAdheridos" role="button">
+        <span class="text-muted" role="button" routerLink="/locales">Atrás</span>
       </div>
     </div>
-  </section>
-  
-  <div class="album bg-light px-0">
-    <div class="container box">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg
-              class="bd-placeholder-img card-img-top"
-              width="100%"
-              height="225"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: Thumbnail"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
-  
-            <div class="card-body box">
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button
-                    routerLink="/pedidoComercioAdherido"
-                    type="button"
-                    class="btn btn-sm btn-outline-secondary"
-                  >
-                    +1
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg
-              class="bd-placeholder-img card-img-top"
-              width="100%"
-              height="225"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: Thumbnail"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
-  
-            <div class="card-body box">
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">
-                    +1
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg
-              class="bd-placeholder-img card-img-top"
-              width="100%"
-              height="225"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: Thumbnail"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
-  
-            <div class="card-body box">
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">
-                    +1
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg
-              class="bd-placeholder-img card-img-top"
-              width="100%"
-              height="225"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: Thumbnail"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-            </svg>
-  
-            <div class="card-body box">
-              <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">
-                    +1
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
+
+    <!-- Resumen de compra -->
+    <div class="col-md-4 summary">
+      <div>
+        <h5><b>Resumen</b></h5>
       </div>
+ 
+    
+      <div
+        class="row"
+        style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;"
+      >
+        <div class="col">Precio Total</div>
+        <div class="col text-right"><span>$</span> {{total}}  </div>
+      </div>
+      <button class="btn">CONFIRMAR</button>
     </div>
   </div>
+</div>
