carta de cada local agregada

--- a/src/app/components/productos-locales/productos-locales.component.html
+++ b/src/app/components/productos-locales/productos-locales.component.html
@@ -9,6 +9,9 @@
         </div>
       </div>
 
+      
+      <!-- Primer local-->
+      <div *ngIf="id === 1">
       <!-- Primer producto -->
       <div class="row border-top border-bottom">
         <div class="row main align-items-center">
@@ -28,7 +31,7 @@
         </div>
       </div>
 
-
+      <!-- Segundo producto -->
       <div class="row border-top border-bottom">
         <div class="row main align-items-center">
           <div class="col-2">
@@ -47,6 +50,8 @@
         </div>
       </div>
 
+
+      <!-- Tercer producto -->
       <div class="row border-top border-bottom">
         <div class="row main align-items-center">
           <div class="col-2">
@@ -64,6 +69,130 @@
           <div class="col"><span>$</span>{{subtotal3}}</div>
         </div>
       </div>
+    </div>
+
+
+      <!-- Segundo local-->
+      <div *ngIf="id === 2">
+      <!-- Primer producto -->
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://mcdonalds.es/api/cms/images/mcdonalds-es/bece0fec-976e-4403-8374-8424497c8b97_1080x943_Menú4You_cheeseburger.png" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Hamburguesa</div>
+            <div class="row">Cheeseburger</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(1, -1)">-</button>
+            <span id="counter">{{ contador1  }}</span>
+            <button class="square-btn" (click)="cambiarContador(1, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal1}}</div>
+        </div>
+      </div>
+
+      <!-- Segundo producto -->
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://i.pinimg.com/474x/d9/6a/1d/d96a1d3e6315ed8e92c892fdd769f9b1.jpg" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Hamburguesa</div>
+            <div class="row">Cangreburger</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(2, -1)">-</button>
+            <span id="counter">{{ contador2 }}</span>
+            <button class="square-btn" (click)="cambiarContador(2, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal2}}</div>
+        </div>
+      </div>
+
+      <!-- Tercer producto -->
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://i.pinimg.com/736x/09/89/27/098927be6224a1b785e346bcd1e6b39b.jpg" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Lomito</div>
+            <div class="row">Lomito ._.</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(3, -1)">-</button>
+            <span id="counter">{{ contador3 }}</span>
+            <button class="square-btn" (click)="cambiarContador(3, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal3}}</div>
+        </div>
+      </div>
+    </div>
+
+      <!-- Tercer local-->
+      <div *ngIf="id === 3">
+      <!-- Primer producto -->
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://d2r9epyceweg5n.cloudfront.net/stores/001/267/330/products/muzzarella1-ca78bc4301f8cd07c915944985769045-640-0.jpg" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Pizza</div>
+            <div class="row">Muzzarella</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(1, -1)">-</button>
+            <span id="counter">{{ contador1  }}</span>
+            <button class="square-btn" (click)="cambiarContador(1, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal1}}</div>
+        </div>
+      </div>
+
+      <!-- Segundo producto -->
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://deliverybrandsen.com/wp-content/uploads/2021/11/pizza.png" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Pizza</div>
+            <div class="row">Especial</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(2, -1)">-</button>
+            <span id="counter">{{ contador2 }}</span>
+            <button class="square-btn" (click)="cambiarContador(2, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal2}}</div>
+        </div>
+      </div>
+
+      <!-- Tercer producto -->
+      <div class="row border-top border-bottom">
+        <div class="row main align-items-center">
+          <div class="col-2">
+            <img class="img-fluid" src="https://img2.freepng.es/20180423/kie/kisspng-pizza-margherita-italian-cuisine-mozzarella-nutrit-pizza-ingredient-5add74bba84a05.0859935915244627796893.jpg" />
+          </div>
+          <div class="col">
+            <div class="row text-muted">Pizza</div>
+            <div class="row">Margarita</div>
+          </div>
+          <div class="col container">
+            <button class="square-btn" (click)="cambiarContador(3, -1)">-</button>
+            <span id="counter">{{ contador3 }}</span>
+            <button class="square-btn" (click)="cambiarContador(3, 1)">+</button>
+          </div>
+          <div class="col"><span>$</span>{{subtotal3}}</div>
+        </div>
+      </div>
+    </div>
+
+      <!-- Volver al negocio-->
       <div class="back-to-shop" routerLink="/comerciosAdheridos" role="button">
         <span class="text-muted" role="button" routerLink="/locales">Atrás</span>
       </div>
