locales y productos terminados

--- a/src/app/components/locales-adheridos/locales-adheridos.component.html
+++ b/src/app/components/locales-adheridos/locales-adheridos.component.html
@@ -15,26 +15,11 @@
       <!-- Local 1 -->
       <div class="col">
         <div class="card shadow-sm">
-          <svg
-            class="bd-placeholder-img card-img-top"
-            width="100%"
-            height="225"
-            xmlns="http://www.w3.org/2000/svg"
-            role="img"
-            aria-label="Placeholder: Thumbnail"
-            preserveAspectRatio="xMidYMid slice"
-            focusable="false"
-          >
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c"></rect>
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-          </svg>
-
+          <img src="https://cdn7.kiwilimon.com/recetaimagen/69/11549.jpg" class="card-img-top" alt="...">
           <div class="card-body box">
+            <h4>El mesón</h4>
             <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
+              25 años acompañando a las familias cordobesas con los mejores sabores.
             </p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
@@ -54,26 +39,11 @@
       <!-- Local 2 -->
       <div class="col">
         <div class="card shadow-sm">
-          <svg
-            class="bd-placeholder-img card-img-top"
-            width="100%"
-            height="225"
-            xmlns="http://www.w3.org/2000/svg"
-            role="img"
-            aria-label="Placeholder: Thumbnail"
-            preserveAspectRatio="xMidYMid slice"
-            focusable="false"
-          >
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c"></rect>
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-          </svg>
-
+          <img src="https://www.circuitogastronomico.com/wp-content/uploads/2022/11/el-meson-lomitodestacada.jpg" class="card-img-top" alt="...">
           <div class="card-body box">
+            <h4>Entre panes</h4>
             <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
+              Especialistas en entrepanes. Los mejores hamburguesas y los lomitos más ricos.
             </p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
@@ -90,26 +60,11 @@
       <!-- Local 3 -->
       <div class="col">
         <div class="card shadow-sm">
-          <svg
-            class="bd-placeholder-img card-img-top"
-            width="100%"
-            height="225"
-            xmlns="http://www.w3.org/2000/svg"
-            role="img"
-            aria-label="Placeholder: Thumbnail"
-            preserveAspectRatio="xMidYMid slice"
-            focusable="false"
-          >
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c"></rect>
-            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-          </svg>
-
+          <img src="https://media-cdn.tripadvisor.com/media/photo-s/19/76/f0/71/pizze-varie-di-gianni.jpg" class="card-img-top" alt="...">
           <div class="card-body box">
+            <h4>Pizzeria</h4>
             <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
+              Pizzeria de especialidad horno de barro. ¡Las pizzas más ricas!
             </p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
