--- a/src/app/components/pedido/pedido.component.html
+++ b/src/app/components/pedido/pedido.component.html
@@ -97,6 +97,9 @@
       </div>
       <button type="button" class="btn btn-primary" style="width: 550px;"  data-bs-toggle="modal" data-bs-target="#exampleModal">Confirmar</button>
     </form>
+    <div class="back-to-shop" routerLink="/comerciosAdheridos" role="button">
+      <span class="text-muted" role="button" routerLink="/locales">Cancelar</span>
+    </div>
 </div>
 
 
